--- a/KifuSF/Base.lproj/Main.storyboard
+++ b/KifuSF/Base.lproj/Main.storyboard
@@ -488,7 +488,7 @@
             </objects>
             <point key="canvasLocation" x="736.79999999999995" y="28.817733990147783"/>
         </scene>
-        <!--Donation Post View Controller-->
+        <!--Post Donation-->
         <scene sceneID="AHO-Fz-f1Q">
             <objects>
                 <viewController id="3Cn-Bv-vTz" customClass="DonationPostViewController" customModule="KifuSF" customModuleProvider="target" sceneMemberID="viewController">
@@ -496,36 +496,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PjC-Lt-neH">
-                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="RBH-Pd-Trz"/>
-                                </constraints>
-                                <color key="barTintColor" red="0.99702380950000002" green="0.99404761900000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <textAttributes key="titleTextAttributes">
-                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
-                                    <color key="textColor" red="0.0" green="0.59999999999999998" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </textAttributes>
-                                <textAttributes key="largeTitleTextAttributes">
-                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
-                                </textAttributes>
-                                <items>
-                                    <navigationItem title="Post Donation" id="byx-KX-sNe">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="vU0-ue-Jtb">
-                                            <color key="tintColor" red="0.0" green="0.59999999999999998" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <connections>
-                                                <action selector="cancelButtonTapped:" destination="3Cn-Bv-vTz" id="cPf-CE-Bhl"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GtP-Ui-Sd1" userLabel="Status Bar Cover View">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="20"/>
-                                <color key="backgroundColor" red="0.99702380950000002" green="0.99404761900000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            </view>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JdW-zt-D3o" userLabel="Image Frame View" customClass="GradientView" customModule="KifuSF" customModuleProvider="target">
-                                <rect key="frame" x="153.66666666666666" y="85" width="106.99999999999997" height="107"/>
+                                <rect key="frame" x="153.66666666666666" y="88" width="106.99999999999997" height="107"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PlusSquare" translatesAutoresizingMaskIntoConstraints="NO" id="g98-OC-9N0">
                                         <rect key="frame" x="0.0" y="0.0" width="107" height="107"/>
@@ -564,7 +536,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="hew-nw-ftb" userLabel="Forms Stack View">
-                                <rect key="frame" x="35" y="208" width="344" height="205.33333333333337"/>
+                                <rect key="frame" x="35" y="211" width="344" height="205.33333333333337"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="NKH-9r-Deq" userLabel="Item Name Stack View">
                                         <rect key="frame" x="0.0" y="0.0" width="344" height="69"/>
@@ -679,6 +651,7 @@
                                                 <state key="normal" title="Set Location"/>
                                                 <connections>
                                                     <action selector="setLocationButtonTapped:" destination="3Cn-Bv-vTz" eventType="touchUpInside" id="LIf-hz-5cy"/>
+                                                    <segue destination="7gV-gn-TA2" kind="show" identifier="locationVC" id="pCR-49-0dP"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -766,25 +739,26 @@
                         </subviews>
                         <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="GtP-Ui-Sd1" firstAttribute="top" secondItem="kXg-zf-T8d" secondAttribute="top" id="18l-Dy-UIk"/>
                             <constraint firstItem="hew-nw-ftb" firstAttribute="centerX" secondItem="kXg-zf-T8d" secondAttribute="centerX" id="1GW-Or-ign"/>
-                            <constraint firstItem="PjC-Lt-neH" firstAttribute="top" secondItem="GtP-Ui-Sd1" secondAttribute="bottom" id="4SG-aK-qNp"/>
                             <constraint firstItem="hew-nw-ftb" firstAttribute="leading" secondItem="BJL-8i-qiE" secondAttribute="leading" constant="35" id="CdP-J8-o47"/>
-                            <constraint firstAttribute="trailing" secondItem="GtP-Ui-Sd1" secondAttribute="trailing" id="Hot-8G-YCw"/>
+                            <constraint firstItem="JdW-zt-D3o" firstAttribute="top" secondItem="BJL-8i-qiE" secondAttribute="top" constant="24" id="Sjk-hk-JJO"/>
                             <constraint firstItem="ev3-yt-85h" firstAttribute="leading" secondItem="BJL-8i-qiE" secondAttribute="leading" constant="35" id="XYH-J9-Cx1"/>
-                            <constraint firstAttribute="trailing" secondItem="PjC-Lt-neH" secondAttribute="trailing" id="Ynf-AX-aSj"/>
-                            <constraint firstItem="GtP-Ui-Sd1" firstAttribute="leading" secondItem="kXg-zf-T8d" secondAttribute="leading" id="asE-LW-8iJ"/>
-                            <constraint firstItem="PjC-Lt-neH" firstAttribute="leading" secondItem="kXg-zf-T8d" secondAttribute="leading" id="gfR-tT-acH"/>
                             <constraint firstItem="hew-nw-ftb" firstAttribute="top" secondItem="JdW-zt-D3o" secondAttribute="bottom" constant="16" id="h4B-LX-zIR"/>
                             <constraint firstItem="BJL-8i-qiE" firstAttribute="trailing" secondItem="ev3-yt-85h" secondAttribute="trailing" constant="35" id="uDP-uy-m9c"/>
-                            <constraint firstItem="PjC-Lt-neH" firstAttribute="top" secondItem="BJL-8i-qiE" secondAttribute="top" id="vCv-hs-JcD"/>
                             <constraint firstItem="BJL-8i-qiE" firstAttribute="trailing" secondItem="hew-nw-ftb" secondAttribute="trailing" constant="35" id="vId-Fc-ldc"/>
                             <constraint firstItem="JdW-zt-D3o" firstAttribute="centerX" secondItem="kXg-zf-T8d" secondAttribute="centerX" id="wUI-79-o1o"/>
                             <constraint firstItem="BJL-8i-qiE" firstAttribute="bottom" secondItem="ev3-yt-85h" secondAttribute="bottom" constant="30" id="wll-vu-qZA"/>
-                            <constraint firstItem="JdW-zt-D3o" firstAttribute="top" secondItem="PjC-Lt-neH" secondAttribute="bottom" constant="21" id="ymb-fD-8js"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BJL-8i-qiE"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Post Donation" id="NXX-xQ-jpp">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="vU0-ue-Jtb">
+                            <color key="tintColor" red="0.0" green="0.59999999999999998" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="cancelButtonTapped:" destination="3Cn-Bv-vTz" id="cPf-CE-Bhl"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="errorLabel" destination="Ij1-am-mkF" id="qgY-Rm-olv"/>
                         <outlet property="itemDescriptionTextView" destination="VfH-0c-z6Z" id="BCF-Ed-3Q3"/>
@@ -794,7 +768,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="StD-Pr-tGv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="23.199999999999999" y="3203.7481259370315"/>
+            <point key="canvasLocation" x="23" y="3933"/>
+        </scene>
+        <!--Location Picker View Controller-->
+        <scene sceneID="iEF-15-sjW">
+            <objects>
+                <viewController id="7gV-gn-TA2" customClass="LocationPickerViewController" customModule="LocationPicker" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Uo6-hj-cO6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="UVG-Ud-XUc"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7IT-sp-07m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="25" y="4670"/>
         </scene>
         <!--Approve Delivery View Controller-->
         <scene sceneID="Lly-nQ-IJf">
@@ -977,7 +966,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UVt-al-rtT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="24.800000000000001" y="3894.6026986506749"/>
+            <point key="canvasLocation" x="1833" y="3203"/>
         </scene>
         <!--Item Detail View Controller-->
         <scene sceneID="nGs-aS-lcX">
@@ -1174,7 +1163,7 @@
                                 <rect key="frame" x="0.0" y="64" width="414" height="672"/>
                                 <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="volunteerCell" rowHeight="117" id="8g4-HN-0GS" customClass="VolunteerCell" customModule="KifuSF" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="volunteerCell" rowHeight="117" id="8g4-HN-0GS" customClass="VolunteerCell" customModule="KifuSF" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="117"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8g4-HN-0GS" id="eFa-jf-HPf">
@@ -1375,7 +1364,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oaU-uN-hS4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="950.72463768115949" y="3202.989130434783"/>
+            <point key="canvasLocation" x="951" y="3224"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Web-Pe-plR">
@@ -1410,7 +1399,7 @@
                                 <rect key="frame" x="0.0" y="64" width="414" height="623"/>
                                 <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="postCell" rowHeight="148" id="beJ-Gr-SOD" customClass="ItemPostCell" customModule="KifuSF" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="postCell" rowHeight="148" id="beJ-Gr-SOD" customClass="ItemPostCell" customModule="KifuSF" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="148"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="beJ-Gr-SOD" id="jAb-sq-PPF">
@@ -1826,7 +1815,7 @@
                                                                         <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="14"/>
                                                                         <state key="normal" title="Donate Now!"/>
                                                                         <connections>
-                                                                            <segue destination="3Cn-Bv-vTz" kind="presentation" id="wuR-JA-jB6"/>
+                                                                            <segue destination="4S3-IQ-YJW" kind="presentation" id="wuR-JA-jB6"/>
                                                                         </connections>
                                                                     </button>
                                                                 </subviews>
@@ -2312,6 +2301,27 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mBq-5h-R6J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="951" y="1701"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="awQ-Lz-FW7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4S3-IQ-YJW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Qdm-9s-YeF">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.298391193151474" green="0.61029189825057983" blue="0.34110593795776367" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3Cn-Bv-vTz" kind="relationship" relationship="rootViewController" id="gS3-hx-NVz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rde-4e-SGs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="25" y="3203"/>
         </scene>
     </scenes>
     <resources>
